--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PortfolioDbConnectionString": "Server=localhost;Database=PortfolioDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "PortfolioDbConnectionString": "Server=FLORESLAPTOP;Database=PortfolioDb;Trusted_Connection=True;TrustServerCertificate=Yes"
   }
 }
