--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PortfolioDbConnectionString": "Server=FLORESLAPTOP;Database=PortfolioDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+  },
+  "Cloudinary": {
+    "ApiKey": "194676737165836",
+    "ApiSecret": "Ywj371S3NUQVmRQMRgd1cFt5Huk",
+    "CloudName": "djdtmbpce"
   }
 }
