--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PortfolioDbConnectionString": "Server=FLORESLAPTOP;Database=PortfolioDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "PortfolioDbConnectionString": "Server=Localhost;Database=PortfolioDb;Trusted_Connection=True;TrustServerCertificate=Yes"
   },
   "Cloudinary": {
     "ApiKey": "194676737165836",
