--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PortfolioDbConnectionString": "Server=Localhost;Database=PortfolioDb;Trusted_Connection=True;TrustServerCertificate=Yes",
-    "PortfolioAuthDbConnectionString": "Server=Localhost;Database=PortfolioAuthDb;Trusted_Connection=True;TrustServerCertificate=Yes"
+    "PortfolioDbConnectionString": "Server=FLORESLAPTOP;Database=PortfolioDb;Trusted_Connection=True;TrustServerCertificate=Yes",
+    "PortfolioAuthDbConnectionString": "Server=FLORESLAPTOP;Database=PortfolioAuthDb;Trusted_Connection=True;TrustServerCertificate=Yes"
   },
   "Cloudinary": {
     "ApiKey": "194676737165836",
