--- a/.github/workflows/master_trustyportfolio.yml
+++ b/.github/workflows/master_trustyportfolio.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - TrustyPortfolio
 
 on:
@@ -10,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
     runs-on: windows-latest
 
     steps:
@@ -22,14 +19,29 @@ jobs:
           dotnet-version: '8.0'
           include-prerelease: true
 
-      - name: Restore dependencies and build
-        run: |
-          dotnet restore
-          dotnet build --configuration Release
+      - name: Restore dependencies
+        run: dotnet restore
 
-      - name: Run tests
-        run: |
-          dotnet test --configuration Release --logger trx --output test-results
+      - name: Build and run tests
+        run: dotnet test --configuration Release --logger trx --output test-results
+
+  build:
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '8.0'
+          include-prerelease: true
+          
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
@@ -42,7 +54,7 @@ jobs:
 
   deploy:
     runs-on: windows-latest
-    needs: build  # Ensure that 'deploy' job depends on 'build' job
+    needs: [test, build]  # Ensure that 'deploy' job depends on 'test' and 'build' jobs
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
