--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -13,32 +13,17 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5026",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "PortfolioVaultUri": "https://trustyportfoliovault.vault.azure.net/",
-        "AZURE_USERNAME": "rcflores19981@hotmail.com"
-      }
+      "applicationUrl": "http://localhost:5026"
     },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7267;http://localhost:5026",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "PortfolioVaultUri": "https://trustyportfoliovault.vault.azure.net/",
-        "AZURE_USERNAME": "rcflores19981@hotmail.com"
-      }
+      "applicationUrl": "https://localhost:7267;http://localhost:5026"
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development  ",
-        "PortfolioVaultUri": "https://trustyportfoliovault.vault.azure.net/",
-        "AZURE_USERNAME": "rcflores19981@hotmail.com"
-      }
+      "launchBrowser": true
     }
   }
 }
