--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,7 @@ ExportedObj/
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# Added by ME
+appsettings.Development.json
+appsettings.json
