--- a/TrustyPortfolio.csproj
+++ b/TrustyPortfolio.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\AuthDb\" />
     <Folder Include="wwwroot\Content\" />
   </ItemGroup>
 
